[package]
name = "tblgen"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Safe Rust bindings for TableGen."
repository = "https://gitlab.com/Danacus/tblgen-rs"
documentation = "https://danacus.gitlab.io/tblgen-rs/tblgen/"
exclude = ["doc/"]

[features]
default = ["llvm16-0"]
llvm16-0 = []
llvm17-0 = []
llvm18-0 = []

[dependencies]
thiserror = { version = "1", default-features = false }
paste = { version = "1", default-features = false }

[build-dependencies]
bindgen = { version = "0.69.4", default-features = false }
cc = "1.0"
